<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".view.MainActivity">

    <include
        layout="@layout/guide_sign_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <FrameLayout
        android:layout_weight="1"
        android:id="@+id/container"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

    </FrameLayout>

    <RadioGroup
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:weightSum="5">

        <RadioButton
            android:id="@+id/home_master_btn"
            android:checked="true"
            android:button="@null"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:drawableTop="@drawable/master_btn"
            android:gravity="center"
            android:text="@string/home_master" />

        <RadioButton
            android:id="@+id/home_work_btn"
            android:button="@null"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:drawableTop="@drawable/work_btn"
            android:gravity="center"
            android:text="@string/home_work" />

        <RadioButton
            android:id="@+id/home_valuable_btn"
            android:button="@null"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:drawableTop="@drawable/valuable_btn"
            android:gravity="center"
            android:text="@string/home_valuable" />

        <RadioButton
            android:id="@+id/home_notice_btn"
            android:button="@null"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:drawableTop="@drawable/notice_btn"
            android:gravity="center"
            android:text="@string/home_notice" />

        <RadioButton
            android:id="@+id/home_myself_btn"
            android:button="@null"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:drawableTop="@drawable/myself_btn"
            android:gravity="center"
            android:text="@string/home_myself" />
    </RadioGroup>
</LinearLayout>
